# sgdl

./: .gitignore  Cargo.toml  README.md  Trunk.toml  diesel.toml  rustfmt.toml
migrations/2025-05-08-050419_init/: down.sql  up.sql
src/: build.rs  common.rs  context.rs  macros.rs  main.rs  profile.rs  schema.rs  store.rs  tauri.conf.json  track.rs
src/commands/: mod.rs  profile.rs  scan.rs  track.rs
src/commands/gui/: mod.rs
src/commands/tui/: app.rs  mod.rs  old.rs
src/commands/tui/components/: line_input.rs  mod.rs  popup_input.rs
src/config/: mod.rs  test.rs
src/file_store/: media_blob.rs  mod.rs
src/file_store/download_manager/: download_queue.rs  mod.rs
src/media/: media_item.rs  mod.rs
src/media/audio/: profile.rs
src/media_sources/: mod.rs  soundgasm.rs
src/media_sources/kemono/: mod.rs  pointer.rs
src/media_sources/soundgasm/: mod.rs  profile.rs  track.rs
src/media_sources/soundgasm/profile/: mod.rs  pointer.rs
src/media_sources/soundgasm/track/: download.rs  metadata.rs  mod.rs  pointer.rs  row.rs  sound_pointer.rs  stored_audio.rs
src/media_types/: mod.rs
src/media_types/audio/: mod.rs  track.rs
src/profile/: mod.rs
src/store/: audio_track.rs  mod.rs
src/store/soundgasm_track/: mod.rs
src/track/: mod.rs
test/fixtures/http/coomer/onlyfans/heidiv/: index.json
test/fixtures/http/coomer/onlyfans/heidiv/posts/: 29526377.json
test/fixtures/http/profiles/sgdl-test/: index.html
test/fixtures/http/profiles/sgdl-test/tracks/: shopping-mall-half-open-Netherlands-207-AM-161001_0998.html
