[package]
name = "sgdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "2.1.2"
clap = { version = "4.5.37", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
