[package]
name = "sgdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "2.1.2"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
confy = "0.6.1"
diesel = { version = "2.2.10", features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
	"chrono",
] }
directories = "6.0.0"
httpmock = "0.7.0"
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
log = { version = "0.4.27", features = ["kv"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
