[package]
name = "sgdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "2.1.2"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
confy = "0.6.1"
crossterm = "0.29.0"
derive_setters = "0.1.8"
diesel = { version = "2.2.10", features = [
	"sqlite",
	"returning_clauses_for_sqlite_3_35",
	"chrono",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
fern = "0.7.1"
futures-util = "0.3.31"
http-content-range = "0.2.3"
httpmock = "0.7.0"
humantime = "2.2.0"
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
log = { version = "0.4.27", features = ["kv"] }
path_macro = "1.0.0"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
strum_macros = "0.27.1"
tokio = { version = "1.45.0", features = ["full"] }
tui-input = { version = "0.14.0", features = ["ratatui"] }
tui-realm-stdlib = "3.0.0"
tuirealm = "3.0.1"
unicode-width = { version = "0.2.0", default-features = false }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
